--- a/static/css/grayscale.css
+++ b/static/css/grayscale.css
@@ -11,7 +11,7 @@
 #mainNav .navbar-toggler {
   font-size: 80%;
   padding: 0.75rem;
-  color: #64a19d;
+  color: #F7F0F8;
   border: 1px solid #64a19d;
 }
 
@@ -89,7 +89,7 @@
   height: auto;
   min-height: 35rem;
   padding: 15rem 0;
-  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url("../img/bg-masthead.jpg");
+  background: linear-gradient(to bottom, rgba(22, 22, 22, 0.1) 0%, rgba(22, 22, 22, 0.5) 75%, #161616 100%), url("../img/photography.jfif");
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: scroll;
@@ -280,7 +280,7 @@ a:focus, a:hover {
 }
 
 .bg-black {
-  background-color: #161616 !important;
+  background-color: #161616!important;
 }
 
 .bg-primary {
